--- a/src/css/home.css
+++ b/src/css/home.css
@@ -57,6 +57,8 @@
   background: var(--red);
   box-shadow: 12px 12px 4px rgba(0, 0, 0, 0.3);
 }
+
+/* Container - right */
 .container__main-right {
 }
 
@@ -178,25 +180,40 @@
   border-bottom-right-radius: 0.19rem;
   border-bottom-left-radius: 0.19rem;
   box-shadow: 0px 12px 4px 0px rgba(0, 0, 0, 0.3);
-  padding: 1.9rem 2.69rem ;
+  padding: 1.5rem 1.5rem ;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  
+}
+
+.right-list-card{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  justify-items: center;
+  align-items: center;
+  /* column-gap: 0.5rem; */
+  row-gap: 1rem;
+  /* padding: 0.5rem; */
+
 }
 
 /* Layaout of  table */
 .right__list-ul{
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  gap: 0.81rem;
+  gap: 0.81rem; */
+  background-color: rgba(253, 237, 237, 0.3);
+  /* border-radius: 0.8rem; */
   
 }
 .right__ul{
-  width: 30.43rem;
-  height: 8.5rem;
-  border-radius: 1.25rem;
-  background-color: rgba(253, 237, 237, 0.3);
+  width: 11.05rem;
+  height: 8.8rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 0.19rem 0.81rem;
+  
 }
 
 .right__ul-li{
@@ -238,6 +255,8 @@
   display: flex;
   justify-content: center;
   gap: 6.4rem;
+  /* position: relative;
+  top: -2.2rem; */
 }
 
 .btnLeft{
@@ -254,6 +273,11 @@
 
 }
 
+.btnLeft:active{
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
 .btnRigth{
   background-image: url('../img/flecha-derecha.png');
   background-repeat: no-repeat;
@@ -265,6 +289,55 @@
   outline: none;
   cursor: pointer;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.4);
-  
+}
 
+.btnRigth:active{
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+/* Container Left */
+.main__left-light{
+  display: flex;
+  gap: 1.38rem;
+  padding-left: 1rem;
+  padding-top: 1.19rem;
+
+}
+
+.lights{
+  display: flex;
+  gap: 0.5rem;
+}
+
+.lightBlue{
+  width: 3.31rem;
+  height: 3.31rem;
+  background: var(--blue-light);
+  border-radius: 50%;
+  border: 0.125rem solid #FFFFFF;
+  box-shadow: 0.25rem 0.25rem 0.25rem rgba(0, 0, 0, 0.25);
+}
+
+.lightRed{
+  width: 1.44rem;
+  height: 1.44rem;
+  background: var(--red-radial);
+  border-radius: 50%;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.lightYellow{
+  width: 1.44rem;
+  height: 1.44rem;
+  background: var(--yellow);
+  border-radius: 50%;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.lightGreen{
+  width: 1.44rem;
+  height: 1.44rem;
+  background: var(--green);
+  border-radius: 50%;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
