upDate: filter uniqueupDate: filter unique by type weak, resistant

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -213,7 +213,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  
+}
+
+.right__ul:hover{
+  cursor: pointer;
 }
 
 .right__ul-li{
