STYLE: add hover for pokemons zoom

--- a/src/css/modalTop.css
+++ b/src/css/modalTop.css
@@ -86,6 +86,13 @@
 
 }
 
+.card-top10 img:hover{
+    -webkit-transform: rotateY(180deg);
+    -webkit-transform-style: preserve-3d;
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+}
+
 .card-top10 p {
     color: #424242;
     font-size: 1.2rem;
