--- a/src/css/home.css
+++ b/src/css/home.css
@@ -436,6 +436,11 @@
   height: 5rem;
 }
 
+.right__ul-li img:hover{
+  -webkit-transform:scale(1.5);
+  transform:scale(1.5);
+}
+
 .right_btn{
   display: flex;
   justify-content: center;
